
* 3.2.9 *

* The #remove_default_constraint uses #execute_procedure now. Fixes #223. Thanks @gicappa and @clintmiller.
* Mimic other adapters quoting for empty strings passed to integer columns. Fixes #164.
* Allow named parameters in stored procedures. Fixes #216. Thanks @sixfeetover.


* 3.2.8 *

* Include VERSION in gemspec's files.


* 3.2.7 *

* Find VERSION in base file out of module namespace. Fixes #208
* Better support for explain without sp_execute args. FIxes #207


* 3.2.6 *

* Unique has_many associations with pagination now work. Fixes #209


* 3.2.5 *

* Fix a few test from ActiveRecord 3.2.6 upgrade.

* Fix db_name usage bug in #column_definitions [Altonymous]


* 3.2.4 *

* Fixed schema reflection for identity columns using ODBC. Fixes #193.


* 3.2.3 *

* Fixed datetime quoting for ActiveSupport::TimeWithZone objects. Fixes #187 and #189.


* 3.2.2 *

* Fixes all known issues with cross database schema reflection. Fixes #185 [Chris Altman]

* Fix exists? with offset by patching visitor. Fixes #171 and Fixes #167

* Set default text size to 2147483647 for TinyTDS connections. Fixes #181

* Set @config ivar for 3rd party libs. Fixes #177

* Make #sql_type_for_statement work for integers that may have empty parens or none at all. Fixes #175


* 3.2.1 *

* Add explicit order-by clause for windowed results. Fixes #161.


* 3.2.0 *

* ActiveRecord explain (SHOWPLAN) support. 
  http://youtu.be/ckb3YYZZZ2Q

* Remove our log_info_schema_queries config since we are not hooking properly into AR's 'SCHEMA' names.

* Properly use 'SCHEMA' name arguement in DB statements to comply with ActiveRecord::ExplainSubscriber::IGNORED_PAYLOADS.

* Make use of the new ConnectionAdapters::SchemaCache for our needs.

* New Sqlserver::Utils class for out helpers. Moved table name unquotes there.


* 3.1.5 *

* Better support for orders with an expression. Fixes #155. [Jason Frey, Joe Rafaniello]


* 3.1.4 *
